--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -63,9 +63,10 @@ dependencies:
 
   # PDF viewer
   native_pdf_view: ^5.0.0
+  flutter_pdfview: ^1.2.1
 
-  syncfusion_flutter_pdfviewer: ^19.4.41-beta
-
+  # Used for identifying page instances within overlay
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
