[+] Added page navigation support [~] Reworked downstream propagation of OverlayDocument using StreamControllers [f] Fixed initial widgets showing empty data by supplying initialData to StreamBuilders

--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   # Used for identifying page instances within overlay
   uuid: ^3.0.5
 
+  # Useful for returning multiple value types within internal functions
+  tuple: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
