--- a/src/packages/schoolexam/pubspec.yaml
+++ b/src/packages/schoolexam/pubspec.yaml
@@ -10,3 +10,9 @@ environment:
 dependencies:
   equatable: ^2.0.3
   meta: ^1.7.0
+
+  # Provides information about application and cache directories
+  path_provider: ^2.0.8
+
+  # Used for persisting data
+  sqflite: ^2.0.1
