--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/fonts/
+     - assets/databases/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
