--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -65,11 +65,14 @@ dependencies:
   native_pdf_view: ^5.0.0
   flutter_pdfview: ^1.2.1
 
+  # Useful for returning multiple value types within internal functions
+  tuple: ^2.0.0
+
   # Used for identifying page instances within overlay
   uuid: ^3.0.5
 
-  # Useful for returning multiple value types within internal functions
-  tuple: ^2.0.0
+  # Used for persisting data
+  sqflite: ^2.0.1
 
 dev_dependencies:
   flutter_test:
