--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
   assets:
      - assets/fonts/
      - assets/databases/
+     - assets/cfg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
