--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -74,6 +74,12 @@ dependencies:
   # Used for persisting data
   sqflite: ^2.0.1
 
+  # Used for dotted borders within new exam card
+  dotted_border: ^2.0.0
+
+  # Used for modal bottom sheets during exam creation
+  modal_bottom_sheet: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -98,8 +104,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/fonts/
-     - assets/databases/
+    - assets/fonts/
+    - assets/databases/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
