[+] Upload exams on submission

--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -1,8 +1,8 @@
-sdk.dir=C:\\Users\\soennecken\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\soennecken\\source\\flutter
+sdk.dir=C:/Users/tompa/AppData/Local/Android/Sdk
+flutter.sdk=C:\\Users\\tompa\\flutter_windows_2.8.1-stable\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.minSdkVersion=20
-flutter.targetSdkVersion=30
-flutter.compileSdkVersion=30
+flutter.targetSdkVersion=32
+flutter.compileSdkVersion=32
