[~] Refactored edit to adhere to popover standard ios

--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -84,6 +84,9 @@ dependencies:
   # Used for modal bottom sheets during exam creation
   modal_bottom_sheet: ^2.0.0
 
+  # Required for edit widgets
+  popover: ^0.2.6+3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
