--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -91,8 +91,15 @@ dependencies:
   pull_to_refresh: ^2.0.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+
+  bloc_test: ^9.0.2
+
+  mocktail: ^0.2.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
