--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -99,6 +99,8 @@ dev_dependencies:
   bloc_test: ^9.0.2
 
   mocktail: ^0.2.0
+  mockito: ^5.0.17
+  build_runner: ^2.1.7
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
