--- a/src/.gitignore
+++ b/src/.gitignore
@@ -44,3 +44,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/test/repositories/online_repository_test.mocks.dart
