--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -1,6 +1,6 @@
 sdk.dir=C:\\Users\\soennecken\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Users\\soennecken\\source\\flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.minSdkVersion=20
