[~] Applied rules of (new) linter to the generated methods (toJson etc.) [+] Added project.properties

--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -109,6 +109,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+  # https://pub.dev/packages/dart_code_metrics
+  # Allows for the static analyzation
+  dart_code_metrics: ^4.9.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
