--- a/src/android/local.properties
+++ b/src/android/local.properties
@@ -1,8 +1,5 @@
 sdk.dir=C:\\Users\\soennecken\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Users\\soennecken\\source\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
-flutter.minSdkVersion=20
-flutter.targetSdkVersion=31
-flutter.compileSdkVersion=31
